--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
     "koa-views": "^3.1.0",
+    "mysql": "^2.10.2",
     "sequelize": "^3.18.0"
   },
   "devDependencies": {
