--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-static": "^1.5.2",
     "koa-views": "^3.1.0",
     "mysql": "^2.10.2",
+    "del": "^2.2.0",
     "sequelize": "^3.18.0"
   },
   "devDependencies": {
